--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@fontsource-variable/quicksand": "^5.0.18",
+    "@sendgrid/mail": "^8.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
