--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "mr-com-core",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/pro-theme": "^0.10.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.6",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@fontsource-variable/quicksand": "^5.0.18",
-    "@sendgrid/mail": "^8.1.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "typescript": "^5"
-  }
+	"name": "mr-com-core",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next-sitemap",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/next-js": "^2.2.0",
+		"@chakra-ui/pro-theme": "^0.10.0",
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"dotenv": "^16.4.5",
+		"framer-motion": "^11.2.6",
+		"next": "14.2.3",
+		"next-sitemap": "^4.2.3",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@fontsource-variable/quicksand": "^5.0.18",
+		"@sendgrid/mail": "^8.1.3",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.3",
+		"typescript": "^5"
+	}
 }
