--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@next/third-parties": "^14.2.3",
 		"dotenv": "^16.4.5",
 		"framer-motion": "^11.2.6",
-		"next": "14.2.3",
+		"next": "^14.2.13",
 		"next-sitemap": "^4.2.3",
 		"react": "^18",
 		"react-dom": "^18"
